...
                                                        <nil key="textColor"/>
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="t7t-Nl-b5k">
                                                        <rect key="frame" x="0.0" y="29" width="343" height="25"/>
                                                        <subviews>
                                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Username" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jRY-cX-n04">
                                                                <rect key="frame" x="0.0" y="0.0" width="343" height="21"/>
                                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                <constraints>
                                                                    <constraint firstAttribute="height" constant="21" id="nzP-q7-lFH"/>
                                                                </constraints>
                                                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
...
                                                <rect key="frame" x="311" y="10" width="48" height="40"/>
                                                <color key="backgroundColor" red="0.89411764709999997" green="0.90980392160000001" blue="0.16862745100000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="40" id="cqb-eb-8Sg"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="15"/>
                                                <state key="normal" title="Edit"/>
                                                <connections>
                                                    <action selector="editButtonTapped:" destination="ySx-SM-L9v" eventType="touchUpInside" id="VPn-cp-ifh"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
...
