...
  private var isAnimate: Bool = false
  
  // MARK: Lifecycle
  override func viewDidLoad() {
    super.viewDidLoad()
    self.configure()
    bioTextView.accessibilityIdentifier = "bio"
    os_log("%@", log: .viewCycle, type: .info, #function)
    os_log("%@", log: .frameChanged, type: .info, operationButton.frame as CVarArg)
  }
  
  override func viewDidLayoutSubviews() {
    super.viewDidLayoutSubviews()
...
