...
                            <constraint firstItem="JN0-8I-qn3" firstAttribute="leading" secondItem="JhH-Ub-Cft" secondAttribute="leading" id="WfN-PA-9aO"/>
                            <constraint firstItem="JN0-8I-qn3" firstAttribute="top" secondItem="2QP-wE-iys" secondAttribute="top" id="fAD-rV-e3q"/>
                            <constraint firstItem="zxV-4Y-fvL" firstAttribute="leading" secondItem="JhH-Ub-Cft" secondAttribute="leading" id="jx4-t3-1hF"/>
                            <constraint firstAttribute="bottom" secondItem="zxV-4Y-fvL" secondAttribute="bottom" id="tXj-Ux-zqF"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Tinkoff chat" id="Bg1-N6-GTf">
                        <barButtonItem key="leftBarButtonItem" image="Settings_group" id="KR7-Jc-HMz">
                            <color key="tintColor" red="0.3294117647" green="0.3294117647" blue="0.34509803919999998" alpha="0.65360124139999998" colorSpace="custom" customColorSpace="calibratedRGB"/>
                            <connections>
                                <action selector="settingsTapped:" destination="0me-a7-DvC" id="2pB-4z-utF"/>
                            </connections>
                        </barButtonItem>
...
